Landing page form fix on mobile

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -261,6 +261,7 @@ canvas {
     position: relative;
     top: 50%;
     width: 32em;
+    max-width: 90%;
     margin: 0 auto;
     transform: translateY(-50%);
 
